Fix some spacing issues in print

--- a/src/print.scss
+++ b/src/print.scss
@@ -102,6 +102,7 @@
       background-color: white;
     }
     padding-top: 3rem;
+    margin-bottom: 1.5rem;
   }
   #script h3.jinxes-heading::after {
     top: calc(1.2rem + 3rem);
@@ -122,6 +123,7 @@
       &::after {
         top: calc(1cap + 3rem);
       }
+      margin-bottom: 1.5rem;
     }
   }
 
